# simple-web-controller

./: CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt  server.py  setup_time_permissions.sh
assets/: cam_calibration.nc  cam_settings.json  openhsi-flask.service  openhsi.ngnix
docs/: setup.md  swagger.json
simple_web_controller/: __init__.py  cli.py  server.py  systemd.py
simple_web_controller/templates/: index.html
templates/: index.html
