[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-web-controller"
version = "1.2.0"
description = "OpenHSI Flask web controller for camera operations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenHSI Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0.0",
    "flask-restx>=1.0.0",
    "openhsi",
    "holoviews",
    "matplotlib",
    "tqdm",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[project.scripts]
simple-web-controller = "simple_web_controller.cli:main"

[project.urls]
Homepage = "https://github.com/openhsi/simple-web-controller"
Repository = "https://github.com/openhsi/simple-web-controller"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_web_controller*"]

[tool.setuptools.package-data]
simple_web_controller = ["templates/*", "static/**/*"]
